add more new sections and styles

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ p{
     color: #666666;
 }
 body{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Gilroy', sans-serif;
+    overflow-x: hidden;
 }
 img{
     max-width: 100%;
@@ -66,6 +67,7 @@ input{
 }
 .top-menu li{
     display: inline-block;
+    font-weight: 500;
 }
 .top-menu li:not(:last-child){
     margin-right: 36px;
@@ -84,6 +86,7 @@ input{
      font-size: 24px;
      line-height: 28px;
      color: #000000;
+    font-weight: 700;
  }
 .logo span{
     color: #F25822;
@@ -91,7 +94,6 @@ input{
 .logo svg{
     margin-right: 14px;
 }
-
 .btn{
     font-size: 12px;
     line-height: 14px;
@@ -102,8 +104,10 @@ input{
     display: inline-block;
     border: 1px solid transparent;
     transition: .6s;
+    font-weight: 700;
 }
 .top-nav .btn{
+    font-weight: 600;
     margin-left: 34px;
 }
 .top-nav .btn:hover{
@@ -141,18 +145,20 @@ input{
 
 /*    HERO   */
 .hero{
-    background-image: url("../images/bg-img.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: right 99px center;
     padding: 103px 0;
 
 }
-/*.hero-box{*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    margin-top: 38px;*/
-/*}*/
+.hero-bg{
+    max-width: none;
+    width: 843px;
+    height: 580px;
+}
+.ltr{
+    direction: ltr;
+}
+.ltr .hero-bg{
+    margin-top: -105px;
+}
 .hero-title{
     font-size: 60px;
     line-height: 70px;
@@ -167,8 +173,10 @@ input{
     border-radius: 50%;
     top: 70px;
     left: -17px;
+    z-index: -2;
 }
 .hero-desc{
+    font-weight: 500;
     font-size: 20px;
     line-height: 23px;
     color: #888888;
@@ -180,7 +188,6 @@ input{
     box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.2);
     border-radius: 50px;
     padding: 16px 36px;
-    display: inline-block;
 }
 
 /*    HERO   */
@@ -200,35 +207,42 @@ input{
 }
 
 /* BRANDS */
+
+/* ABOUT */
 .about{
+    position: relative;
     padding: 50px 0;
-    background: #FAFAFA;
+    background: #fafafa url("../images/waves.png") no-repeat center/cover;
 }
-.about-col{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.align-items-center{
+    align-items: center;
 }
 .about-title{
     font-size: 45px;
     line-height: 53px;
-    color: #000000;
 }
 .about-desc{
     line-height: 24px;
-    color: #666666;
     margin: 20px 0 35px;
 }
-.about-link{
+.about .btn{
     font-size: 15px;
     line-height: 18px;
-    color: #FFFFFF;
-    background: #F25822;
     box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.2);
     border-radius: 50px;
     padding: 16px 31px;
-    display: inline-block;
 }
+.about-img{
+    width: 800px;
+    height: 600px;
+    max-width: none;
+}
+.ltr .about-img{
+    margin-top: -23px;
+}
+/* ABOUT */
+
+/* FEATURES */
 .features{
     padding: 140px 0 125px;
 }
@@ -238,6 +252,9 @@ input{
 .features-col{
     padding: 0 45px;
 }
+.features-box{
+    padding: 30px;
+}
 .features-icon{
     width: 70px;
     height: 70px;
@@ -245,15 +262,6 @@ input{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.icon-red{
-    background: rgba(242, 88, 34, 0.25);
-}
-.icon-green{
-    background: rgba(20, 146, 17, 0.28);
-}
-.icon-yellow{
-    background: rgba(255, 205, 29, 0.24);
 }
 .features-title{
     font-size: 24px;
@@ -264,7 +272,6 @@ input{
 .features-desc{
     font-size: 15px;
     line-height: 22px;
-    color: #666666;
     margin-bottom: 25px;
 }
 .features-link{
@@ -273,6 +280,21 @@ input{
     color: #000000;
     font-weight: 700;
 }
+/* FEATURES */
+
+/* ICONS */
+.icon-red{
+    background: rgba(242, 88, 34, 0.25);
+}
+.icon-green{
+    background: rgba(20, 146, 17, 0.28);
+}
+.icon-yellow{
+    background: rgba(255, 205, 29, 0.24);
+}
+/* ICONS */
+
+/* SERVICES */
 .services{
     text-align: center;
     padding: 92px 0 100px;
@@ -284,7 +306,6 @@ input{
 }
 .section-desc{
     line-height: 24px;
-    color: #666666;
     margin: 19px 0 54px;
 }
 .services-box{
@@ -305,6 +326,7 @@ input{
     max-width: 310px;
 }
 .services-link{
+    font-weight: 700;
     font-size: 13px;
     line-height: 19px;
     color: #FFFFFF;
@@ -321,13 +343,24 @@ input{
     height: 100%;
     object-fit: cover;
 }
+/* SERVICES */
+
+/* SEO */
 .seo{
     padding: 107px 0 14px;
-    background: url("../images/seo-bg.png") no-repeat left/contain;
 }
 .seo-container{
     display: flex;
     justify-content: flex-end;
+}
+.seo-bg{
+    direction: rtl;
+}
+.seo-img{
+    max-width: none;
+}
+.seo-desc{
+    margin: 19px 0 79px;
 }
 .seo-box{
     display: flex;
@@ -357,6 +390,9 @@ input{
     line-height: 22px;
     color: #666666;
 }
+/* SEO */
+
+/* FACTS */
 .facts{
     padding: 100px 0;
 }
@@ -374,14 +410,48 @@ input{
     margin-bottom: 10px;
 }
 .facts-desc{
+    font-weight: 600;
     font-size: 18px;
     line-height: 27px;
     color: #666666;
 }
-.mail{
-    height: 60vh;
-    background: url("../images/mail-bg.png") no-repeat right/contain;
+.facts-box{
+    position: relative;
 }
+.orange-circle:before{
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #F3602D;
+    right: -71px;
+    top: 50px;
+}
+.green-circle:before{
+    background-color: #149211;
+    right: -71px;
+    margin: auto;
+    top: 50px;
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+.yellow-circle:before{
+    background-color: #FFC700;
+    right: -71px;
+    top: 50px;
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+/* FACTS */
+
+/* MAIL */
 .mail-box{
     padding: 138px 0;
 }
@@ -399,6 +469,7 @@ input{
     margin: 3px 0 55px;
 }
 ::placeholder{
+    font-weight: 500;
     font-size: 11px;
     line-height: 16px;
     color: #666666;
@@ -417,6 +488,7 @@ input{
     border-left: 2px solid #CCCCCC;
 }
 .mail-box-btn{
+    font-weight: 700;
     font-size: 13px;
     line-height: 19px;
     color: #FFFDFD;
@@ -427,6 +499,17 @@ input{
     border: none;
     margin-left: 29px;
 }
+.mail-bg{
+    width: 796px;
+    height: 558px;
+    max-width: none;
+}
+.ltr .mail-bg{
+    margin-top: -50px;
+}
+/* MAIL */
+
+/* PLANS */
 .plans{
     padding: 87px 0 130px;
     background: #FAFAFA;
@@ -473,12 +556,16 @@ input{
 .plans-items{
     margin: 3px 0 39px;
 }
+.plans-items li{
+    list-style: none;
+}
 .plans-item{
     font-size: 16px;
     line-height: 40px;
     color: #666666;
 }
 .plans-box-btn{
+    font-weight: 700;
     font-size: 13px;
     line-height: 32px;
     color: #F3602D;
@@ -496,12 +583,16 @@ input{
     background: #F25822;
     box-shadow: 4px 4px 10px rgba(242, 88, 34, 0.25);
 }
+/* PLANS */
+
+/* TEAM */
 .team{
     padding: 86px 0 100px;
     text-align: center;
 }
 .team-desc{
-    margin: 12px 0 52px;
+    margin: 25px 0 52px;
+    font-weight: 500;
 }
 .team-box{
     padding: 50px 70px;
@@ -514,6 +605,7 @@ input{
     margin-top: 14px;
 }
 .box-subtitle{
+    font-weight: 500;
     font-size: 13px;
     line-height: 19px;
     color: #888888;
@@ -521,22 +613,258 @@ input{
 }
 .socials-box{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    margin: 0 -15px;
+    padding: 0 10px;
+}
+.social-icon svg path{
+    fill: #aaaaaa;
+    transition: .6s;
 }
 .social-icon{
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    display: inline-block;
-    text-align: center;
-    background: transparent;
-    padding: 0 15px;
-    color: #AAAAAA;
+    background-color: transparent;
     transition: .6s;
 }
-.social-icon:hover{
-    color: #FFFFFF;
-    background: #F25822;
+.social-icon:hover svg path{
+    fill: #ffffff;
 }
+.social-icon:hover{
+    background-color: #f25822;
+}
+/* TEAM */
+
+/* TESTIMONIALS */
+.testimonials{
+    padding: 93px 0 142px;
+    text-align: center;
+}
+.testimonials .section-title{
+    line-height: 53px;
+}
+.testimonials .section-desc{
+    font-size: 16px;
+    line-height: 24px;
+    color: #666666;
+    margin: 19px 0 55px;
+}
+.testimonials-box{
+    padding: 25px 30px 27px;
+    border: 2px solid #EEEEEE;
+    position: relative;
+}
+.testimonials-box:before{
+    content: url("../images/quote.png");
+    position: absolute;
+    top: 20px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: -1;
+}
+.testimonials-box-desc{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #888888;
+}
+.testimonials-img img{
+    border-radius: 50%;
+    margin: 28px 0 5px;
+}
+.testimonials-box-title {
+    font-size: 13px;
+    line-height: 19px;
+    font-weight: 600;
+}
+.testimonials-box-subtitle{
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 19px;
+    color: #888888;
+    margin-bottom: -1px;
+}
+/* TESTIMONIALS */
+
+/* BLOG */
+.blog{
+    padding: 93px 0 142px;
+}
+.post{
+    height: 330px;
+}
+.blog-row .center{
+    box-shadow: 15px 25px 60px -10px rgba(0, 0, 0, 0.1);
+}
+.blog-title{
+    text-align: center;
+    font-size: 45px;
+    line-height: 67px;
+}
+.blog-desc{
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #666666;
+    margin: 5px 0 45px;
+}
+.blog-img img{
+    width: 466px;
+    height: 349px;
+    object-fit: cover;
+}
+.blog-box{
+     padding: 46px 30px 45px 0;
+ }
+.blog-box-title{
+    font-size: 24px;
+    line-height: 36px;
+}
+.blog-stats{
+    display: flex;
+    align-items: center;
+}
+.blog-stats div{
+    display: flex;
+    align-items: center;
+    margin: 20px 0 22px;
+    font-weight: 500;
+}
+.blog-stats div:not(:last-child){
+    margin-right: 35px;
+}
+.blog-stats div span{
+    font-size: 11px;
+    line-height: 16px;
+    color: #888888;
+}
+.blog-box-desc{
+    font-size: 15px;
+    line-height: 22px;
+    margin-bottom: 26px;
+    font-weight: 500;
+}
+.blog-box-link{
+    font-size: 11px;
+    line-height: 16px;
+    color: #F25822;
+    font-weight: 700;
+
+}
+.owl-item{
+    opacity: 0.5;
+    border: 2px solid #EEEEEE;
+}
+.owl-item.center{
+    opacity: 1;
+    height: 335px;
+    border: none;
+    box-shadow: 15px 25px 60px -10px rgba(0, 0, 0, 0.1);
+}
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background: #F25822;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+.owl-theme .owl-nav.disabled+.owl-dots {
+    margin-top: 32px;
+}
+/* BLOG */
+
+
+
+/* FOOTER */
+.footer{
+    padding: 94px 0 19px;
+    background:  #F3F3F3;
+}
+.footer-logo{
+    display: flex;
+    align-items: center;
+    font-size: 28px;
+    line-height: 33px;
+    font-weight: 700;
+}
+.footer-logo span{
+    color: #F25822;
+}
+.footer-desc{
+    font-size: 16px;
+    line-height: 26px;
+    margin: 40px 0 8px;
+}
+.footer-box{
+    margin-bottom: 54px;
+}
+.footer-socials-box{
+    display: flex;
+    align-items: center;
+}
+.footer-icon svg path{
+    fill: #aaaaaa;
+    transition: .6s;
+}
+.footer-icon{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: transparent;
+    transition: .6s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 17px;
+}
+.footer-icon:hover svg path{
+    fill: #ffffff;
+}
+.footer-icon:hover{
+    background-color: #f25822;
+}
+.footer-box-title{
+    font-size: 24px;
+    line-height: 38px;
+    margin-bottom: 34px;
+}
+.footer-links{
+    list-style: none;
+    margin-left: 16px;
+}
+.footer-link{
+    font-size: 16px;
+    line-height: 37px;
+    font-weight: 600;
+    color: #666666;
+    position: relative;
+}
+.footer-link:before{
+    content: "";
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background-color: #F25822;
+    border-radius: 50%;
+    left: -16px;
+    top: 7px;
+}
+.our-contacts{
+    color: #333333;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+}
+.our-contacts a{
+    color: #666666;
+}
+.footer-copyright{
+    padding-top: 19px;
+    font-size: 16px;
+    line-height: 37px;
+    color: #888888;
+    text-align: center;
+    border-top: 1px solid #CCCCCC;
+}
+/* FOOTER */
