--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?47432356');
-  src: url('../font/fontello.eot?47432356#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?47432356') format('woff2'),
-       url('../font/fontello.woff?47432356') format('woff'),
-       url('../font/fontello.ttf?47432356') format('truetype'),
-       url('../font/fontello.svg?47432356#fontello') format('svg');
+  src: url('../fonts/fontello.eot?47432356');
+  src: url('../fonts/fontello.eot?47432356#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?47432356') format('woff2'),
+       url('../fonts/fontello.woff?47432356') format('woff'),
+       url('../fonts/fontello.ttf?47432356') format('truetype'),
+       url('../fonts/fontello.svg?47432356#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/* Note, that will break hinting! In other OS-es fonts will be not as sharp as it could be */
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?47432356#fontello') format('svg');
+  @fonts-face {
+    fonts-family: 'fontello';
+    src: url('../fonts/fontello.svg?47432356#fontello') format('svg');
   }
 }
 */
@@ -45,7 +45,7 @@
   margin-left: .2em;
  
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+  /* fonts-size: 120%; */
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
